--- a/grow_fr_model.ipynb
+++ b/grow_fr_model.ipynb
@@ -27,16 +27,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DGNyvb-KUB6A",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Are the customer geeting frustrated to not find a scooter near?\n",
+        "## The goal for this model giving a day of week and the hour what's is the most probable place where the customer will need a scooter and wont find it.\n",
+        "\n",
+        " \n",
+        "\n",
+        "Author: Rodrigo Domingos dos Santos\n",
+        "\n",
+        "Data source: Grow micro mobility company data sample for interview "
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "q8FARyq2cLHf",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "# Library setup"
+        "## Library setup"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "zBbyMUPCKskr",
         "colab_type": "code",
@@ -46,12 +64,11 @@
           "height": 846
         }
       },
-      "cell_type": "code",
       "source": [
         "!pip install qgrid\n",
         "!pip install pandas_ml"
       ],
-      "execution_count": 73,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,22 +125,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "-lpTr8J9cbqu",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "# Data Extraction"
+        "## Data Extraction (ELT)"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "C8r9eA2FEPoA",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "import pandas_profiling\n",
         "import numpy as np\n",
@@ -147,6 +164,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "f2KwdEypFBR-",
         "colab_type": "code",
@@ -156,9 +174,8 @@
           "height": 70
         }
       },
-      "cell_type": "code",
       "source": [
-        "\n",
+        "#connecting to Grow database\n",
         "\n",
         "try:\n",
         "   connection = psycopg2.connect(user=\"grin_technical_challenge\",\n",
@@ -190,7 +207,7 @@
         "        connection.close()\n",
         "        print(\"PostgreSQL connection is closed\")"
       ],
-      "execution_count": 75,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,13 +221,14 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "h-mVZRgzHm1F",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
+        "# Preparing Rides and Open_app dataframes\n",
         "rides = pd.DataFrame(db_rides)\n",
         "open_app = pd.DataFrame(db_open_app)\n",
         "\n",
@@ -221,6 +239,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "ooBaqmF9Kc5X",
         "colab_type": "code",
@@ -230,12 +249,12 @@
           "height": 52
         }
       },
-      "cell_type": "code",
       "source": [
+        "#checking datasets\n",
         "print(\"Open_app count: \", open_app.shape[0])\n",
-        "print(\"Rides count: \", rides.shape[0])\n"
+        "print(\"Rides count: \", rides.shape[0])"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,6 +267,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "4YAlqy7yK1Gi",
         "colab_type": "code",
@@ -257,12 +277,11 @@
           "height": 343
         }
       },
-      "cell_type": "code",
       "source": [
         "open_app.columns = ['open_app_id','open_app_open_time','open_app_starting_lng','open_app_starting_lat','open_app_user_id']\n",
         "open_app.head(10)"
       ],
-      "execution_count": 78,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,6 +431,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "E9vrgYG6MjfU",
         "colab_type": "code",
@@ -421,12 +441,11 @@
           "height": 531
         }
       },
-      "cell_type": "code",
       "source": [
         "rides.columns = ['id','open_app_id','rides_start_time','rides_finish_time','rides_starting_lng','rides_starting_lat','rides_dest_lng','rides_dest_lat','rides_price','rides_user_id','rides_scooter_id']\n",
         "rides.head(10)"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,6 +673,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "enffDZzHQgbP",
         "colab_type": "code",
@@ -663,12 +683,12 @@
           "height": 34
         }
       },
-      "cell_type": "code",
       "source": [
+        "#Merging datasets using full outer join\n",
         "df = pd.merge(open_app, rides, on='open_app_id', how='outer')\n",
         "df.shape[0]"
       ],
-      "execution_count": 80,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,12 +705,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "Ka3wz4KwRzIH",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -698,24 +718,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "24c5cauZVcYW",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "\n",
-        "# Machine Learning data preparation\n"
+        "## Machine Learning data preparation\n"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "O72T_JbEVi-2",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
+        "#Feature engineering\n",
+        "\n",
         "dfml = df[['open_app_id','open_app_open_time','open_app_starting_lng','open_app_starting_lat','id']]\n",
         "\n",
         "dfml['day0fweek'] = dfml['open_app_open_time'].dt.dayofweek\n",
@@ -733,16 +755,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "xSectRlks2bs",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "### Highlight: Customer Frustration rate"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "pZfB8gh7sZRa",
         "colab_type": "code",
@@ -752,12 +775,14 @@
           "height": 87
         }
       },
-      "cell_type": "code",
       "source": [
+        "#Checking the frequency\n",
+        "# 1 Opened the app and started a ride\n",
+        "# 0 Opned the app and not started a ride\n",
         "print(dfml['result'].value_counts())\n",
         "print('Customer frustration rate: ', dfml[dfml['result'] == 0].result.count() / dfml['result'].count())"
       ],
-      "execution_count": 82,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,13 +797,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VntCOvZ1Wk8Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "## The first hypothesis is that: if the customer opens the app and not start a ride it's because there's no scooter available in an acceptable distance."
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "eWB8HIpqjk28",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
+        "#summarizing dataset\n",
         "dfml_hist = dfml[['open_app_open_time','result']]\n",
         "dfml_hist.open_app_open_time = dfml.open_app_open_time.astype(str).str.slice(0, 10)\n",
         "\n",
@@ -791,13 +827,16 @@
         "\n",
         "dfml_hist = pd.merge(dfml_hist, dfml_hist_wr, on='open_app_open_time', how='left')\n",
         "\n",
-        "#CSV\n",
+        "#Exporting CSV to perform data analysis\n",
+        "# I used Tableau please take a look:\n",
+        "# https://public.tableau.com/profile/rodrigo3750#!/vizhome/GrowFrustrationRate/RideSearchFrustration  \n",
         "dfml_hist.to_csv('tbl_grow_rodrigo_perf_hist.csv', sep='|', encoding='utf-8',index=False)\n"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "4XS1QvYYuJPa",
         "colab_type": "code",
@@ -807,14 +846,13 @@
           "height": 195
         }
       },
-      "cell_type": "code",
       "source": [
-        "\n",
+        "#Selecting usefull columns\n",
         "columns = ['open_app_id','open_app_open_time','open_app_starting_lng','open_app_starting_lat','id']\n",
         "dfml.drop(columns, inplace=True, axis=1)\n",
         "dfml.head()"
       ],
-      "execution_count": 84,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -907,16 +945,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "nbk5_Q9Nc-1r",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "# Data visualization"
+        "## Data visualization"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "o_YcdCrwKWUZ",
         "colab_type": "code",
@@ -926,11 +965,11 @@
           "height": 10390
         }
       },
-      "cell_type": "code",
       "source": [
+        "#General data visualization analisys\n",
         "pandas_profiling.ProfileReport(dfml)"
       ],
-      "execution_count": 85,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2825,16 +2864,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1_b-u4TPdI6e",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "# Machine Learning trainning"
+        "## Machine Learning trainning"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "Ztr3EBHGO7Sf",
         "colab_type": "code",
@@ -2844,11 +2884,12 @@
           "height": 122
         }
       },
-      "cell_type": "code",
       "source": [
+        "#Training and test data\n",
+        "#Using basic 80-20 split on this first version, planning to use kfold on v2\n",
+        "\n",
         "y = dfml[['result']]\n",
         "dfml.drop('result',inplace=True, axis=1)\n",
-        "\n",
         "\n",
         "# Data Split\n",
         "X_train, X_test, y_train, y_test = train_test_split(dfml, y, test_size=0.2, random_state=42)\n",
@@ -2861,7 +2902,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 86,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2878,6 +2919,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "z5KTrPIBSZ8H",
         "colab_type": "code",
@@ -2887,9 +2929,10 @@
           "height": 3607
         }
       },
-      "cell_type": "code",
       "source": [
         "# Parameters\n",
+        "#Using default parameters this first version, planning to grid search on v2\n",
+        "\n",
         "xgb_params = {'eta': 0.2\n",
         "             ,'gamma': 0\n",
         "             ,'min_child_weight':1\n",
@@ -2914,7 +2957,7 @@
         "                  ,verbose_eval=5\n",
         "                  ,early_stopping_rounds=50)"
       ],
-      "execution_count": 87,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3129,16 +3172,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "WmMytkrGdPDV",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Machine Learning results"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "zvhHYzzkaJ7k",
         "colab_type": "code",
@@ -3148,12 +3192,11 @@
           "height": 546
         }
       },
-      "cell_type": "code",
       "source": [
         "#Plotting feature importance\n",
         "xgb.plot_importance(model)"
       ],
-      "execution_count": 88,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3182,6 +3225,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "zgN3wB-1emqO",
         "colab_type": "code",
@@ -3191,11 +3235,11 @@
           "height": 1415
         }
       },
-      "cell_type": "code",
       "source": [
+        "#Plotting model tree\n",
         "xgb.to_graphviz(model, num_trees=2)"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3213,28 +3257,28 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "zByAQpeufhDh",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
-        "#Save Model\n",
+        "#Saving the model\n",
         "model.save_model('grow_frustration_v1.model')"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "cG6arA9IEkHA",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
-        "#Load Model\n",
+        "#Loading the model\n",
         "model = xgb.Booster({'nthread': 4})  # init model\n",
         "model.load_model('grow_frustration_v1.model')  # load data"
       ],
@@ -3242,6 +3286,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "XDuNOKH9UgbY",
         "colab_type": "code",
@@ -3251,8 +3296,8 @@
           "height": 272
         }
       },
-      "cell_type": "code",
       "source": [
+        "#Checking results using confusion matrix\n",
         "%matplotlib inline\n",
         "model_pred = model.predict(d_valid)\n",
         "cm=confusion_matrix(y_test, model_pred.round()) \n",
@@ -3261,7 +3306,7 @@
         "# labels, title and ticks\n",
         "ax.figsize=(15,8)## Validação\n"
       ],
-      "execution_count": 92,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3278,42 +3323,18 @@
       ]
     },
     {
-      "metadata": {
-        "id": "Oz6ueSjSUgu2",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "9rjJ8qojJ9mx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "j7qvZv63dUYt",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "# Machine Learning prediction"
+        "## Machine Learning prediction\n",
+        "### Select the day of week and the hour that you want to predict:"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "3ZND8yXvdY6G",
         "colab_type": "code",
@@ -3323,7 +3344,6 @@
           "height": 195
         }
       },
-      "cell_type": "code",
       "source": [
         "#@title Prediction form { display-mode: \"form\" }\n",
         "Day_of_week_to_predict = 4 #@param {type:\"slider\", min:0, max:6, step:1}\n",
@@ -3343,7 +3363,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 93,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3430,6 +3450,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "sEws-LjTbnFR",
         "colab_type": "code",
@@ -3439,15 +3460,16 @@
           "height": 343
         }
       },
-      "cell_type": "code",
       "source": [
+        "#Performing prediction\n",
+        "\n",
         "d_predic = xgb.DMatrix(dfpred)\n",
         "\n",
         "dfpred['prediction_perc'] = model.predict(d_predic)\n",
         "dfpred['prediction']  = model.predict(d_predic).round() \n",
         "dfpred.head(10)\n"
       ],
-      "execution_count": 94,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3596,6 +3618,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "pt-w7VfBf6PY",
         "colab_type": "code",
@@ -3605,11 +3628,11 @@
           "height": 70
         }
       },
-      "cell_type": "code",
       "source": [
+        "#Showing prediction frequency\n",
         "dfpred['prediction'].value_counts()"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3628,44 +3651,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "uGFMyUcmieKX",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "## Exporting result\n",
         "### ! Please uncomment to overwrite the previous result"
       ]
     },
     {
-      "metadata": {
-        "id": "HuHBg3-dij05",
-        "colab_type": "code",
-        "colab": {}
-      },
       "cell_type": "code",
-      "source": [
-        "#Postgre\n",
-        "\n",
-        "#from sqlalchemy import create_engine\n",
-        "#engine = create_engine('postgresql://grin_technical_challenge:kjbaskc24bkjhb354bbjk@grin-technical-test.crf3v8rvj0hp.us-east-1.rds.amazonaws.com:5432/postgres')\n",
-        "#dfpred.to_sql('tbl_grow_rodrigo_frate', engine, if_exists='replace')\n",
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "metadata": {
         "id": "IgxGCaitqsXY",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
-        "\n",
-        "#CSV\n",
+        "#Exporting results to CSV\n",
         "dfpred.to_csv('tbl_grow_rodrigo_frate.csv', sep='|', encoding='utf-8',index=False)\n",
         " "
       ],
