--- a/grow_fr_model.ipynb
+++ b/grow_fr_model.ipynb
@@ -828,8 +828,7 @@
         "dfml_hist = pd.merge(dfml_hist, dfml_hist_wr, on='open_app_open_time', how='left')\n",
         "\n",
         "#Exporting CSV to perform data analysis\n",
-        "# I used Tableau please take a look:\n",
-        "# https://public.tableau.com/profile/rodrigo3750#!/vizhome/GrowFrustrationRate/RideSearchFrustration  \n",
+        "\n",
         "dfml_hist.to_csv('tbl_grow_rodrigo_perf_hist.csv', sep='|', encoding='utf-8',index=False)\n"
       ],
       "execution_count": 0,
@@ -3672,6 +3671,35 @@
         "#Exporting results to CSV\n",
         "dfpred.to_csv('tbl_grow_rodrigo_frate.csv', sep='|', encoding='utf-8',index=False)\n",
         " "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zKsHdY2UgBj_",
+        "colab_type": "text"
+      },
+      "source": [
+        "## The Dashboard built based on the output information:\n",
+        "\n",
+        "Dashboard\n",
+        "https://public.tableau.com/profile/rodrigo3750#!/vizhome/GrowFrustrationRate/RideSearchFrustration  \n",
+        "\n",
+        "Story\n",
+        "https://public.tableau.com/profile/rodrigo3750#!/vizhome/GrowFrustrationRatepresentation/FRatePresentation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RFgr_tVagVQp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
